# hierarchical-walking-animation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: control_points.txt
include/hierarchical_walk/: Animation.h  ArticulatedFigure.h  Constants.h  FileIO.h  Renderer.h  Spline.h  Vec3.h
src/: main.cpp
src/hierarchical_walk/: Animation.cpp  ArticulatedFigure.cpp  FileIO.cpp  Renderer.cpp  Spline.cpp  Vec3.cpp
